[tool.poetry]
name = "debug-langchain-gpt-4-turbo-2024-04-09"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.2"
langchain = "^0.1.15"
langchainhub = "^0.1.15"
tavily-python = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
